--- a/3d_Elasticity.ipynb
+++ b/3d_Elasticity.ipynb
@@ -22,13 +22,14 @@
     "from mpi4py import MPI\n",
     "from petsc4py import PETSc\n",
     "\n",
-    "from dolfinx import fem, mesh, io, plot, log\n",
-    "from dolfinx.fem import (Constant, dirichletbc, Function, FunctionSpace, Expression )\n",
-    "from dolfinx.fem.petsc import NonlinearProblem\n",
+    "from dolfinx import fem, mesh, io, plot, log,default_scalar_type\n",
+    "from dolfinx.fem import (Constant, dirichletbc, Function, functionspace, Expression )\n",
+    "from dolfinx.fem.petsc import NonlinearProblem,LinearProblem\n",
     "from dolfinx.nls.petsc import NewtonSolver\n",
     "from dolfinx.io import XDMFFile\n",
     "import ufl\n",
-    "from ufl import (TestFunctions, TrialFunction, Identity, grad, det, div, dev, inv, tr, sqrt, conditional , gt, dx, inner, derivative, dot, ln, split,TestFunction)\n",
+    "from ufl import (TestFunctions, TrialFunction, Identity, grad, det, div, dev, inv, tr, sqrt, conditional , gt, dx, inner, derivative, dot, ln, split,TestFunction,indices,as_tensor)\n",
+    "from basix.ufl import element, mixed_element\n",
     "from datetime import datetime\n",
     "from dolfinx.plot import vtk_mesh\n",
     "\n",
@@ -78,7 +79,9 @@
    "outputs": [],
    "source": [
     "length = 10.0 # mm\n",
-    "domain = mesh.create_box(MPI.COMM_WORLD,[[0.0,0.0,0.0],[length,length,length]],[2,2,2],mesh.CellType.tetrahedron)"
+    "longside= 100\n",
+    "num_elements = 10\n",
+    "domain = mesh.create_box(MPI.COMM_WORLD,[[0.0,0.0,0.0],[longside,length,length]],[num_elements*10,num_elements,num_elements],mesh.CellType.tetrahedron)"
    ]
   },
   {
@@ -89,12 +92,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3e3fcfbe0da475e998250167c7ceafb",
+       "model_id": "c07f39d5f4334a5e850f3b678f4fa0ec",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:63921/index.html?ui=P_0x28a3b3c10_0&reconnect=auto' style='width: …"
+       "Widget(value=\"<iframe src='http://localhost:34119/index.html?ui=P_0xffff5f2df520_0&reconnect=auto' style='widt…"
       ]
      },
      "metadata": {},
@@ -119,16 +122,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Tensor space\n",
-    "T_Ele = ufl.TensorElement(\"Quadrature\", domain.ufl_cell(),1,symmetry=True)\n",
-    "U_Ele = ufl.VectorElement(\"CG\", domain.ufl_cell(),1)\n",
+    "import basix.ufl\n",
     "\n",
-    "T_quad = FunctionSpace(domain,T_Ele)\n",
-    "V_u = FunctionSpace(domain,U_Ele)"
+    "#T_Ele = basix.ufl.quadrature_element(domain.topology.cell_name(),value_shape=(3,3),degree=1)\n",
+    "\n",
+    "\n",
+    "n = 0\n",
+    "\n",
+    "U_Ele = element(\"Lagrange\", domain.basix_cell(),1,shape=(3,))\n",
+    "\n",
+    "#T_quad = functionspace(domain,T_Ele)\n",
+    "V_u = functionspace(domain,U_Ele)"
    ]
   },
   {
@@ -139,82 +148,163 @@
    "source": [
     "#MAT Properties\n",
     "\n",
-    "K = Constant(domain,200.0e6) #200 GPa Bulk Modulus\n",
-    "G = Constant(domain,80.0e6) #80 GPa Shear Modulus\n",
+    "K = Constant(domain,160e9) #200 MPa Bulk Modulus\n",
+    "G = Constant(domain,80.0e9) #80 Mpa Shear Modulus\n",
     "\n",
-    "Lambda = 3\n",
+    "I = Identity(3)\n",
+    "II = ufl.outer(I,I)\n",
+    "i,j,k,l = indices(4)\n",
+    "Ident_sym_ii =1/2 * (I[i,k]*I[j,l] + I[i,l]*I[j,k])\n",
     "\n",
-    "I = np.eye(3)\n",
+    "Ident_sym = as_tensor(Ident_sym_ii,(i,j,k,l))\n",
+    "C = 2*G*Ident_sym + (K-(2/3)*G)*II"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y = 9*G.value*K.value/(G.value+3*K.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u = TrialFunction(V_u)\n",
+    "v = ufl.TestFunction(V_u)\n",
+    "E =ufl.sym(ufl.grad(u))\n",
+    "T = as_tensor(C[i,j,k,l]*E[k,l],(i,j))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T_2 = fem.Constant(domain, default_scalar_type((0, 0, 0)))\n",
+    "ds = ufl.Measure(\"ds\", domain=domain)\n",
+    "a = inner(T , grad(v) )*dx\n",
+    "L =  ufl.dot(T_2, v) * ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clamped_boundary(x):\n",
+    "    return np.isclose(x[0], 0)\n",
     "\n",
     "\n",
-    "E = np.zeros((3,3))\n",
-    "\n",
-    "#Fourth Order Symmetric Identity Matrix\n",
-    "Ident_sym = (np.einsum('ik,jl->ijkl',I,I) + np.einsum('il,jk->ijkl',I,I))/2\n",
+    "def strech(x):\n",
+    "    return np.isclose(x[0], longside)\n",
     "\n",
     "\n",
-    "C = 2*G*Ident_sym + (K-(2/3)*G)*np.tensordot(I,I,0)\n"
+    "fdim = domain.topology.dim - 1\n",
+    "boundary_facets = mesh.locate_entities_boundary(domain, fdim, clamped_boundary)\n",
+    "boundary_facets_2 = mesh.locate_entities_boundary(domain, fdim, strech)\n",
+    "\n",
+    "u_D = np.array([0, 0, 0], dtype=default_scalar_type)\n",
+    "u_D2 = np.array([10, 0, 0], dtype=default_scalar_type)\n",
+    "bc = fem.dirichletbc(u_D, fem.locate_dofs_topological(V_u, fdim, boundary_facets), V_u)\n",
+    "bc2 = fem.dirichletbc(u_D2, fem.locate_dofs_topological(V_u, fdim, boundary_facets_2), V_u)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "problem = LinearProblem(a, L, bcs=[bc,bc2], petsc_options={\"ksp_type\": \"preonly\", \"pc_type\": \"lu\"})\n",
+    "uh = problem.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "U = functionspace(domain,(\"DG\",0))\n",
+    "\n",
+    "mises = Function(U)\n",
+    "E =ufl.sym(ufl.grad(uh))\n",
+    "T_val = as_tensor(C[i,j,k,l]*E[k,l],(i,j))\n",
+    "T0   = T_val- (1/3)*tr(T_val)*Identity(3)\n",
+    "mises_val= sqrt(3/2*inner(T0,T0))\n",
+    "mises_expr = Expression(mises_val,U.element.interpolation_points())\n",
+    "mises.interpolate(mises_expr)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "beeddbf93b7440edb5d0af891c1c23ed",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value=\"<iframe src='http://localhost:34119/index.html?ui=P_0xffff5f387fd0_0&reconnect=auto' style='widt…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "u = TrialFunction(V_u)"
+    "pyvista.set_jupyter_backend('client')\n",
+    "# Create plotter and pyvista grid\n",
+    "p = pyvista.Plotter()\n",
+    "topology, cell_types, geometry = plot.vtk_mesh(V_u)\n",
+    "grid = pyvista.UnstructuredGrid(topology, cell_types, geometry)\n",
+    "\n",
+    "# Attach vector values to grid and warp grid by vector\n",
+    "grid[\"u\"] = uh.x.array.reshape((geometry.shape[0], 3))\n",
+    "#actor_0 = p.add_mesh(grid, style=\"wireframe\", color=\"k\")\n",
+    "warped = grid.warp_by_vector(\"u\", factor =1)\n",
+    "warped.cell_data['mag'] = mises.vector.array /1e6\n",
+    "warped.set_active_scalars(\"mag\")\n",
+    "actor_1 = p.add_mesh(warped, show_edges=True)\n",
+    "p.enable_point_picking()\n",
+    "p.show_axes()\n",
+    "if not pyvista.OFF_SCREEN:\n",
+    "    p.show()\n",
+    "else:\n",
+    "    figure_as_array = p.screenshot(\"deflection.png\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Transposed(Grad(Argument(FunctionSpace(Mesh(blocked element (Basix element (P, tetrahedron, 1, gll_warped, unset, False), (3,)), 0), VectorElement(FiniteElement('Lagrange', tetrahedron, 1), dim=3)), 1, None)))"
+       "20505.688836517693"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "E_expr = Expression(1/2*(grad(u)+(grad(u).T)),V_u.element.interpolation_points())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "Cannot interpolate Expression with Argument",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m/Users/jorgenin/Documents/Python/Research/2.077/FinitePlasticity/3d_Elasticity.ipynb Cell 14\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jorgenin/Documents/Python/Research/2.077/FinitePlasticity/3d_Elasticity.ipynb#X42sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m E \u001b[39m=\u001b[39m Function(T_quad)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jorgenin/Documents/Python/Research/2.077/FinitePlasticity/3d_Elasticity.ipynb#X42sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m E\u001b[39m.\u001b[39;49minterpolate(E_expr)\n",
-      "File \u001b[0;32m/usr/local/dolfinx_real/lib/python3.11/dist-packages/dolfinx/fem/function.py:397\u001b[0m, in \u001b[0;36mFunction.interpolate\u001b[0;34m(self, u, cells, nmm_interpolation_data)\u001b[0m\n\u001b[1;32m    393\u001b[0m     cells \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marange(\u001b[39mmap\u001b[39m\u001b[39m.\u001b[39msize_local \u001b[39m+\u001b[39m \u001b[39mmap\u001b[39m\u001b[39m.\u001b[39mnum_ghosts, dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39mint32)\n\u001b[1;32m    395\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    396\u001b[0m     \u001b[39m# u is a Function or Expression (or pointer to one)\u001b[39;00m\n\u001b[0;32m--> 397\u001b[0m     _interpolate(u, cells)\n\u001b[1;32m    398\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m    399\u001b[0m     \u001b[39m# u is callable\u001b[39;00m\n\u001b[1;32m    400\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mcallable\u001b[39m(u)\n",
-      "File \u001b[0;32m/opt/homebrew/Cellar/python@3.11/3.11.6/Frameworks/Python.framework/Versions/3.11/lib/python3.11/functools.py:909\u001b[0m, in \u001b[0;36msingledispatch.<locals>.wrapper\u001b[0;34m(*args, **kw)\u001b[0m\n\u001b[1;32m    905\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m args:\n\u001b[1;32m    906\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mfuncname\u001b[39m}\u001b[39;00m\u001b[39m requires at least \u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m    907\u001b[0m                     \u001b[39m'\u001b[39m\u001b[39m1 positional argument\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m--> 909\u001b[0m \u001b[39mreturn\u001b[39;00m dispatch(args[\u001b[39m0\u001b[39;49m]\u001b[39m.\u001b[39;49m\u001b[39m__class__\u001b[39;49m)(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkw)\n",
-      "File \u001b[0;32m/usr/local/dolfinx_real/lib/python3.11/dist-packages/dolfinx/fem/function.py:388\u001b[0m, in \u001b[0;36mFunction.interpolate.<locals>._\u001b[0;34m(expr, cells)\u001b[0m\n\u001b[1;32m    385\u001b[0m \u001b[39m@_interpolate\u001b[39m\u001b[39m.\u001b[39mregister(Expression)\n\u001b[1;32m    386\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_\u001b[39m(expr: Expression, cells: typing\u001b[39m.\u001b[39mOptional[np\u001b[39m.\u001b[39mndarray] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m):\n\u001b[1;32m    387\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Interpolate Expression for the set of cells\"\"\"\u001b[39;00m\n\u001b[0;32m--> 388\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_cpp_object\u001b[39m.\u001b[39;49minterpolate(expr\u001b[39m.\u001b[39;49m_cpp_object, cells)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Cannot interpolate Expression with Argument"
-     ]
-    }
-   ],
-   "source": [
-    "E = Function(T_quad)\n",
-    "E.interpolate(E_expr)"
+    "np.mean(mises.vector.array)/1e6"
    ]
   }
  ],
@@ -234,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
