Finalized 3d_Elasticity example.

--- a/3d_Elasticity.ipynb
+++ b/3d_Elasticity.ipynb
@@ -92,12 +92,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c07f39d5f4334a5e850f3b678f4fa0ec",
+       "model_id": "c01dff1e8cd448089b6bd0550a41b74a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:34119/index.html?ui=P_0xffff5f2df520_0&reconnect=auto' style='widt…"
+       "Widget(value=\"<iframe src='http://localhost:37921/index.html?ui=P_0xffffa81afdc0_0&reconnect=auto' style='widt…"
       ]
      },
      "metadata": {},
@@ -212,9 +212,9 @@
     "boundary_facets_2 = mesh.locate_entities_boundary(domain, fdim, strech)\n",
     "\n",
     "u_D = np.array([0, 0, 0], dtype=default_scalar_type)\n",
-    "u_D2 = np.array([10, 0, 0], dtype=default_scalar_type)\n",
+    "u_D2 = np.array(10, dtype=default_scalar_type)\n",
     "bc = fem.dirichletbc(u_D, fem.locate_dofs_topological(V_u, fdim, boundary_facets), V_u)\n",
-    "bc2 = fem.dirichletbc(u_D2, fem.locate_dofs_topological(V_u, fdim, boundary_facets_2), V_u)"
+    "bc2 = fem.dirichletbc(u_D2, fem.locate_dofs_topological(V_u.sub(0), fdim, boundary_facets_2), V_u.sub(0))"
    ]
   },
   {
@@ -252,12 +252,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "beeddbf93b7440edb5d0af891c1c23ed",
+       "model_id": "8aa7453208c34718b3f0e270f5daf4aa",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:34119/index.html?ui=P_0xffff5f387fd0_0&reconnect=auto' style='widt…"
+       "Widget(value=\"<iframe src='http://localhost:37921/index.html?ui=P_0xffff6c687580_0&reconnect=auto' style='widt…"
       ]
      },
      "metadata": {},
@@ -285,26 +285,6 @@
     "else:\n",
     "    figure_as_array = p.screenshot(\"deflection.png\")\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20505.688836517693"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.mean(mises.vector.array)/1e6"
    ]
   }
  ],
