Added a 2D test plasticity version to verify everything will work.
This is based up on the Continum mechanics numerical tour

--- a/3d_Elasticity.ipynb
+++ b/3d_Elasticity.ipynb
@@ -246,18 +246,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8aa7453208c34718b3f0e270f5daf4aa",
+       "model_id": "4dbb45a00e0a4efda8d03c0fd86b2458",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:37921/index.html?ui=P_0xffff6c687580_0&reconnect=auto' style='widt…"
+       "Widget(value=\"<iframe src='http://localhost:37921/index.html?ui=P_0xffff6e30bee0_1&reconnect=auto' style='widt…"
       ]
      },
      "metadata": {},
