Added new snes solver for plasticity

--- a/2d_test_Plasticity_New_Frac.ipynb
+++ b/2d_test_Plasticity_New_Frac.ipynb
@@ -120,10 +120,10 @@
       "Info    : [ 30%] Meshing curve 2 (Line)\n",
       "Info    : [ 50%] Meshing curve 3 (Circle)\n",
       "Info    : [ 80%] Meshing curve 4 (Circle)\n",
-      "Info    : Done meshing 1D (Wall 0.000198042s, CPU 0.00033s)\n",
+      "Info    : Done meshing 1D (Wall 0.000238958s, CPU 0.000406s)\n",
       "Info    : Meshing 2D...\n",
       "Info    : Meshing surface 20 (Plane, Frontal-Delaunay)\n",
-      "Info    : Done meshing 2D (Wall 0.0262688s, CPU 0.026565s)\n",
+      "Info    : Done meshing 2D (Wall 0.0267505s, CPU 0.026528s)\n",
       "Info    : 809 nodes 1619 elements\n"
      ]
     }
@@ -196,12 +196,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ded62d22b9714000b25b8a9188458c56",
+       "model_id": "cb1e15e8f6d94ab3abe9fd706561d78d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:34211/index.html?ui=P_0xffff58fbc580_0&reconnect=auto' style='widt…"
+       "Widget(value=\"<iframe src='http://localhost:33683/index.html?ui=P_0xffff5b37c5b0_0&reconnect=auto' style='widt…"
       ]
      },
      "metadata": {},
@@ -488,6 +488,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "------------------------------------\n",
+      "Simulation Start\n",
+      "------------------------------------\n",
       "\n",
       "----------- Solve for t=0.148 -----------\n",
       "Number of iterations :  2\n",
@@ -687,11 +690,18 @@
       "\n",
       "----------- Solve for t=1.049 -----------\n",
       "Number of iterations :  5\n",
-      "Converged reason = 1.000\n"
+      "Converged reason = 1.000\n",
+      "-----------------------------------------\n",
+      "End computation\n",
+      "------------------------------------------\n",
+      "Elapsed real time:  0:00:02.507765\n",
+      "------------------------------------------\n"
      ]
     }
    ],
    "source": [
+    "startTime = datetime.now()\n",
+    "\n",
     "Nincr = stud[\"N incr\"]\n",
     "\n",
     "load_steps = np.linspace(0, 1.1, Nincr+1)[1:]**0.5\n",
@@ -704,7 +714,7 @@
     "\n",
     "solver = NewtonSolver(MPI.COMM_WORLD, problem)\n",
     "solver.convergence_criterion = \"incremental\"\n",
-    "solver.rtol = 1e-8\n",
+    "solver.rtol = 1e-9\n",
     "solver.atol = 1e-8\n",
     "solver.max_it = 50\n",
     "solver.report = True\n",
@@ -721,12 +731,17 @@
     "\n",
     "new_sig_tr, new_sig_dev, dp_= compute_new_state(du, sig, p)\n",
     "\n",
+    "print(\"------------------------------------\")\n",
+    "print(\"Simulation Start\")\n",
+    "print(\"------------------------------------\")\n",
+    "\n",
     "\n",
     "for (i, t) in enumerate(load_steps):\n",
     "    loading.value = t * q_lim\n",
     "    du.x.array[:] = 0.\n",
     "    print(f\"\\n----------- Solve for t={t:5.3f} -----------\")\n",
     "    (iter, converged) = solver.solve(du)\n",
+    "\n",
     "    print(\"Number of iterations : \", iter)\n",
     "    print(f\"Converged reason = {converged:1.3f}\")\n",
     "    \n",
@@ -746,7 +761,17 @@
     "        # Post-processing\n",
     "    u_pointe = u.eval(pointForStress,colliding_cells.array[0])[0]\n",
     "    du_pointe = du.eval(pointForStress,colliding_cells.array[0])[0]\n",
-    "    results[i + 1, :] = (u_pointe, t)\n"
+    "    results[i + 1, :] = (u_pointe, t)\n",
+    "\n",
+    "\n",
+    "print(\"-----------------------------------------\")\n",
+    "print(\"End computation\")                 \n",
+    "# Report elapsed real time for the analysis\n",
+    "endTime = datetime.now()\n",
+    "elapseTime = endTime - startTime\n",
+    "print(\"------------------------------------------\")\n",
+    "print(\"Elapsed real time:  {}\".format(elapseTime))\n",
+    "print(\"------------------------------------------\")"
    ]
   },
   {
