Fixed first verison of the of 3d plasticity.
Have linear hardness measure

--- a/2d_test_Plasticity.ipynb
+++ b/2d_test_Plasticity.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -83,13 +83,13 @@
       "Info    : [ 30%] Meshing curve 2 (Circle)\n",
       "Info    : [ 50%] Meshing curve 3 (Line)\n",
       "Info    : [ 80%] Meshing curve 4 (Circle)\n",
-      "Info    : Done meshing 1D (Wall 0.000256583s, CPU 0.00039s)\n",
+      "Info    : Done meshing 1D (Wall 0.000275542s, CPU 0.000372s)\n",
       "Info    : Meshing 2D...\n",
       "Info    : Meshing surface 6 (Plane, Frontal-Delaunay)\n",
-      "Info    : Done meshing 2D (Wall 0.0106105s, CPU 0.008988s)\n",
+      "Info    : Done meshing 2D (Wall 0.0108835s, CPU 0.011182s)\n",
       "Info    : 812 nodes 1625 elements\n",
       "Info    : Optimizing mesh (Netgen)...\n",
-      "Info    : Done optimizing mesh (Wall 1.084e-06s, CPU 3e-06s)\n"
+      "Info    : Done optimizing mesh (Wall 1.24998e-06s, CPU 4e-06s)\n"
      ]
     }
    ],
@@ -106,18 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4db2059fca84a219945ee7d5d041d57",
+       "model_id": "ebf7241410fb4d6b91d31b2f0fdf771e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:46073/index.html?ui=P_0xffffa861fa90_0&reconnect=auto' style='widt…"
+       "Widget(value=\"<iframe src='http://localhost:42863/index.html?ui=P_0xffff509b14b0_0&reconnect=auto' style='widt…"
       ]
      },
      "metadata": {},
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,6 +151,30 @@
     "\n",
     "\n",
     "ds = ufl.Measure(\"ds\", domain=domain, subdomain_data=ft)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "707.070707070707"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "E_val = E.value\n",
+    "\n",
+    "H_val = E_val*E_val/100 /(E_val-E_val/100)\n",
+    "\n",
+    "H_val"
    ]
   },
   {
@@ -196,7 +220,7 @@
     "Du = Function(V, name=\"Current_increment\")\n",
     "\n",
     "v = TrialFunction(V)\n",
-    "u_ = TestFunction(V)"
+    "u_ = TestFunction(V) "
    ]
   },
   {
@@ -408,6 +432,13 @@
     "\n",
     "res = -inner(eps(u_), as_3D_tensor(sig))*dxm + loading_Constant* dot(n, u_) *ds(4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -675,7 +706,7 @@
       "-----------------------------------------\n",
       "End computation\n",
       "------------------------------------------\n",
-      "Elapsed real time:  0:00:03.590247\n",
+      "Elapsed real time:  0:00:03.553124\n",
       "------------------------------------------\n"
      ]
     }
@@ -733,9 +764,9 @@
     "        assemble_vector(b, L)\n",
     "        \n",
     "        b.ghostUpdate(addv=PETSc.InsertMode.ADD, mode=PETSc.ScatterMode.REVERSE)\n",
-    "        apply_lifting(b, [a], [bcs],[Du.vector], scale=1)\n",
+    "        apply_lifting(b, [a], [bcs],[u.vector], scale=1)\n",
     "\n",
-    "        set_bc(b, bcs,Du.vector)\n",
+    "        set_bc(b, bcs,u.vector)\n",
     "        \n",
     "        res2val = solver.solve(b, du.vector)\n",
     "        du.x.scatter_forward()\n",
