--- a/plasticity_3d_simple.ipynb
+++ b/plasticity_3d_simple.ipynb
@@ -96,18 +96,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33aa7a54fd63400b9b2272e5a391dc0e",
+       "model_id": "41f1eeef6a45458fac9ae7185f34e15d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:36217/index.html?ui=P_0xffff983efd90_0&reconnect=auto' style='widt…"
+       "Widget(value=\"<iframe src='http://localhost:34107/index.html?ui=P_0xffff6c381720_0&reconnect=auto' style='widt…"
       ]
      },
      "metadata": {},
@@ -1195,7 +1195,188 @@
       "Linear Step 1 Done\n",
       "Starting Plastic Step\n",
       "Stop Plastic Step  Done\n",
-      "Linear Step 2 Start\n"
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 76\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 77\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 78\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 79\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 80\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 81\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 82\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 83\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 84\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 85\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 86\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 87\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 88\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 89\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 90\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 91\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 92\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 93\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 94\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 95\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 96\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 97\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 98\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 99\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "Increment: 100\n",
+      "Linear Step 1 Start\n",
+      "Linear Step 1 Done\n",
+      "Starting Plastic Step\n",
+      "Stop Plastic Step  Done\n",
+      "Linear Step 2 Start\n",
+      "Linear Step 1 Done\n",
+      "-----------------------------------------\n",
+      "End computation\n",
+      "------------------------------------------\n",
+      "Elapsed real time:  0:00:44.401949\n",
+      "------------------------------------------\n"
      ]
     }
    ],
@@ -1262,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,18 +1454,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de6716c622874ab194c03177e5a3d879",
+       "model_id": "921052a6688845409fd7c770351e0dd2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value=\"<iframe src='http://localhost:45503/index.html?ui=P_0xffff484e6110_0&reconnect=auto' style='widt…"
+       "Widget(value=\"<iframe src='http://localhost:34107/index.html?ui=P_0xffff6c0f6650_0&reconnect=auto' style='widt…"
       ]
      },
      "metadata": {},
@@ -1313,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
