--- a/3d_Plasticity.ipynb
+++ b/3d_Plasticity.ipynb
@@ -480,130 +480,7 @@
       "Residual: 1.968239602794123e-12\n",
       "Stop Plastic Step  Done\n",
       "Increment: 41\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 1.927999190560231e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 42\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 1.983573921633325e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 43\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 1.9673841917569457e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 44\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 1.955492120403399e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 45\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 2.0070746603073043e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 46\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 2.0046770072469845e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 47\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 1.9583184214836374e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 48\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 2.001195307765693e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 49\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 1.9401837395590687e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 50\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 1.9969851726197773e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 51\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 2.0049169015824605e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 52\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 1.9787187585045754e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 53\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 1.996262543621043e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 54\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 1.9861181310989345e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 55\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 2.00779339789894e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 56\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 2.0045570493132798e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 57\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 2.3901043046135055e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 58\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 2.413930854855052e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 59\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 2.4729791410179827e-12\n",
-      "Stop Plastic Step  Done\n",
-      "Increment: 60\n",
-      "Linear Step 1 Start\n",
-      "Linear Step 1 Done\n",
-      "Starting Plastic Step\n",
-      "Residual: 2.4711309116840085e-12\n",
-      "Stop Plastic Step  Done\n",
-      "-----------------------------------------\n",
-      "End computation\n",
-      "------------------------------------------\n",
-      "Elapsed real time:  0:00:14.721997\n",
-      "------------------------------------------\n"
+      "Linear Step 1 Start\n"
      ]
     }
    ],
@@ -672,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
